--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -17,6 +17,6 @@
         Стиль фьюжн, продемонстрований в цій коллекції, відображає гардероб сучасної жінки: значну частину нашого одягу
         становлять зручні речі, але іноді ми можемо придбати дещо вишукане, на зразок модний жакет або спідницю,
         щоб підкреслити свій образ. Завдяки чому став відомим одяг від Шанель, це напевно бездоганні, сяючі сатінові костюми.
-        Ви зможете одягти їх з блейзером, кардиганом, обо відповідною блузою і піти хоч на край світу. </string>
+        Ви зможете одягти їх з блейзером, кардиганом, обо відповідною блузою і піти в них хоч на край світу. </string>
 
 </resources>
