--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -34,11 +34,7 @@ SOFTWARE.-->
     <string name="spring_couture">кутюр весна</string>
 
     <string name="description">Досконалість та професійна майстернicть париських дизайнерiв представлена
-        у новiй колекцiї достименно стала найвизначнiшою подiею цiеї весни. В коллекції були присутні водночас такі
-        яскраві речі, як леопардовий жакет, корсет (одягненний поверх светра), та двустороння вишита куртка-бомбер.
-        Стиль фьюжн, продемонстрований в цій коллекції, відображає гардероб сучасної жінки: значну частину нашого одягу
-        становлять зручні речі, але іноді ми можемо придбати дещо вишукане, на зразок модний жакет або спідницю,
-        щоб підкреслити свій образ. Завдяки чому став відомим одяг від Шанель, це напевно бездоганні, сяючі сатінові костюми.
-        Ви зможете одягти їх з блейзером, кардиганом, обо відповідною блузою і піти в них хоч на край світу. </string>
-
+        у новiй колекцiї достименно стала найвизначнiшою подiею цiеї весни. Стиль фьюжн, продемонстрований у цій коллекції,
+        відображає гардероб сучасної жінки. Завдяки чому став відомим одяг від Шанель, це напевно бездоганні, сяючі костюми.
+        Ви зможете одягти їх з блейзером, кардиганом, або сатиновою блузою і піти в них хоч на край світу. </string>
 </resources>
